# CasinoSimulator

./: CMakeLists.txt  Casino.cpp  Casino.h  Enums.h  ExitHelper.h  FileHandler.cpp  FileHandler.h  Game.cpp  Game.h  Player.cpp  Player.h  README.md  Rng.cpp  Rng.h  RoundUI.cpp  RoundUI.h  TestPlayground.cpp  TextRes.h  main.cpp
Games/: BlackjackGame.cpp  BlackjackGame.h  Game.h  RouletteGame.cpp  RouletteGame.h  SlotsGame.cpp  SlotsGame.h
Resources/: Enums.h  TextRes.h
